# rejillas

./: .directory  .gitignore  CMakeLists.txt  Makefile  Makefile.Debug  Makefile.Release  calcula_rejillas.pro  dialog.cpp  dialog.h  dialogo.qml  main.cpp  rejilla.cpp  rejilla.h  resultado.cpp  resultado.h  tabla.cpp  tabla.h  ui_dialog.h
